fix img distortion

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -4798,10 +4798,15 @@ a.mad-read-more {
 }
 
 .mad-team-member .mad-team-member-photo img {
-    width: 100% !important;
+    width: 100%;
+    height: inherit;
+    object-fit: contain;
     margin-left: 0;
     margin-right: 0;
-    border-radius: 0.5rem;
+    min-width: 100%;
+    min-height: 100%;
+
+
 
 }
 
@@ -9697,38 +9702,4 @@ body.mad-full-page .mad-full-page-wrap .mad-team.style-2>.mad-col:nth-child(-n+9
     margin: 0;
     padding: 0;
     font-family: "Hind", sans-serif;
-}
-
-.countdown {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 10px 20px;
-    border: 1px solid gray;
-    width: 30%;
-    text-align: center;
-}
-
-.countdown .day,
-.countdown .hour,
-.countdown .min,
-.countdown .sec {
-    padding: 20px;
-    text-align: center;
-}
-
-.countdown .day .num,
-.countdown .hour .num,
-.countdown .min .num,
-.countdown .sec .num {
-    display: block;
-    font-size: 20px;
-}
-
-.countdown .day .word,
-.countdown .hour .word,
-.countdown .min .word,
-.countdown .sec .word {
-    display: block;
-    font-size: 20px;
 }
